control-plane/custom-gateway-api/conformance/tests/httproute-invalid-backendref-unknown-kind.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-backend-ref-unknown-kind
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - group: unknownkind.example.com
      kind: NonExistent
      name: infra-backend-v1
      port: 8080
